2003-02-22  Steven Bosscher  <s.bosscher@student.tudelft.nl>

PR other/3782
	* toplev.c (process_options): If flag_detailed_statistics is set,
	then set time_report as well.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@63274 138bc75d-0d04-0410-961f-82ee72b054a4